[package]
name = "pod"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
quinn = "0.11.7"
rustls = "0.23.26"
rustls-pemfile = "2.2.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
chrono = "0.4"
axum = "0.8.3"
serde = { version = "1.0.219",features = ["derive"]}
serde_json = "1.0.140"
bincode = "1.3.3"
sysinfo = "0.35.0"


[package.metadata.deb]
maintainer = "Xandeum Labs"
depends = "$auto"
section = "net"
priority = "optional"
assets = [
  ["target/release/pod", "usr/bin/pod", "755"]
]
copyright = "2025@Xandeum Labs"