[package]
name = "pod"
version = "0.1.1"
edition = "2021"
license = "MIT"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Xandeum Labs <dev@xandeum.com>"]
repository = "https://github.com/Xandeum"
homepage = "https://xandeum.com"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
members = [
    ".",
    "xandeum-programs/common",
]


[dependencies]
anyhow = "1.0.98"
quinn = "0.11.7"
rustls = "0.23.26"
rustls-pemfile = "2.2.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
chrono = "0.4"
axum = "0.8.3"
serde = { version = "1.0.219",features = ["derive"]}
serde_json = "1.0.140"
bincode = "1.3.3"
sysinfo = "0.35.0"

[dependencies.common]
path  = "./xandeum-programs/common"

[package.metadata.deb]
maintainer = "Xandeum Labs"
depends = "$auto"
section = "net"
priority = "optional"
assets = [
  ["target/release/pod", "usr/bin/pod", "755"]
]
copyright = "2025@Xandeum Labs"