[package]
name = "pod"
version = "0.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Xandeum Team"]
description = "High-performance blockchain node implementation for the Xandeum network"
homepage = "https://github.com/xandeum/pod"
repository = "https://github.com/xandeum/pod"
keywords = ["blockchain", "rpc", "p2p", "networking"]
categories = ["network-programming", "web-programming::http-server"]

[package.metadata.docs.rs]
# Enable all features when building docs on docs.rs
all-features = true
# Show private items in documentation
rustdoc-args = ["--document-private-items"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Xandeum Labs <dev@xandeum.com>"]
repository = "https://github.com/Xandeum"
homepage = "https://xandeum.com"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
members = [
    ".",
    "xandeum-programs/common",
]


[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
bincode = "1.3.3"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
prost = "0.13.5"
quinn = "0.11.7"
rand = "0.9.1"
rcgen = "0.13"
rustls = "0.23.26"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.35.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

[build-dependencies]
prost-build = "0.13.5" 


[dependencies.common]
path  = "./xandeum-programs/common"

[package.metadata.deb]
maintainer = "Xandeum Labs"
depends = "$auto"
section = "net"
priority = "optional"
assets = [
  ["target/release/pod", "usr/bin/pod", "755"]
]
copyright = "2025@Xandeum Labs"
